00-boostrap-env/manifests/ingress-otel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lgtm
  namespace: otel
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: lgtm.volcamp.opsrel.io
    http:
      paths:
      - backend:
          service:
            name: lgtm
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - lgtm.volcamp.opsrel.io
    secretName: lgtm-tls
